fix: fab ux on mobile, and aria

--- a/src/styles/typography.sass
+++ b/src/styles/typography.sass
@@ -110,6 +110,8 @@ cyan-toolbar h1, cyan-toolbar h2, cyan-toolbar h3, cyan-toolbar h4
 
 a
   text-decoration: none
+a:hover
+  text-decoration: none
 p a
   text-decoration: underline
   color: var(--cyan-link-color)
